--- a/src/components/page-header/PageHeader.scss
+++ b/src/components/page-header/PageHeader.scss
@@ -6,13 +6,16 @@
   padding-left: 1.375rem;
   border-bottom: $stroke;
   position: relative;
+
   span {
     min-width: 11.5rem;
-    padding: 1.125rem  0 1.125rem 0;
+    padding: 1.125rem 0 1.125rem 0;
   }
+
   a {
     padding: 1.125rem 2rem;
     border-left: $stroke;
+
     &:hover {
       color: $hoverFontClr;
       -webkit-box-shadow: inset 0px -3px 0px 0px $accentClr1;
@@ -20,12 +23,21 @@
       box-shadow: inset 0px -3px 0px 0px $accentClr1;
     }
   }
-  .projects {
+
+  #projects {
     border-right: $stroke;
   }
-  .contact {
+
+  #contact {
     position: absolute;
     right: 0;
     top: 0;
   }
+}
+
+.active {
+  color: $hoverFontClr;
+  -webkit-box-shadow: inset 0px -3px 0px 0px $accentClr1;
+  -moz-box-shadow: inset 0px -3px 0px 0px $accentClr1;
+  box-shadow: inset 0px -3px 0px 0px $accentClr1;
 }
