--- a/src/app/contact-me/page.scss
+++ b/src/app/contact-me/page.scss
@@ -1,6 +1,7 @@
 @import '../../styles/variables';
 
 .contact_page {
+  width: 100%;
   height: 100%;
   display: grid;
   grid-template-columns: 1fr 0 1fr;
@@ -8,8 +9,10 @@
   justify-items: center;
   align-items: center;
   .form {
+    max-width: 23.25rem;
+    margin: auto;
     input, textarea {
-      width: 23.25rem;
+      width: 100%;
       margin-top: 0.625rem;
       margin-bottom: 1.5rem;
       background-color: #011221;
@@ -38,14 +41,24 @@
 }
 
 .contact_form {
-  width: fit-content;
+  width: 100%;
   height: fit-content;
+  padding: 0 27px;
+  margin: auto;
 }
 
 .contact_stroke {
   width: 1px;
   height: 100%;
   background-color: $strokeClr;
+}
+
+@media (min-width: 446px) {
+  .form {
+    input, textarea {
+      max-width: 23.25rem;
+    }
+  }
 }
 
 @media (max-width: 1250px) {
