--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,6 +7,18 @@ $hoverFontClr: white;
 $strokeClr: #1E2D3D;
 $accentClr1: #FEA55F;
 
-$stroke: 1px solid $strokeClr;
 
 $pagePadding: 2vw;
+
+$lightMode-bodyClr: #D8EDFE;
+$lightMode-mainClr: #EAF5FE;
+$lightMode-cardBg: #DEEFFE;
+$lightMode-cardBtn: #C5D4E3;
+$lightMode-mainFontClr: #869B9F;
+$lightMode-secondaryFontClr: #313FB2;
+$lightMode-thirdFontClr: #5565E8;
+$lightMode-hoverFontClr: white;
+$lightMode-strokeClr: #C2D1E1;
+$lightMode-accentClr1: #A04701;
+
+$stroke: 1px solid $strokeClr;
