--- a/src/app/projects/page.scss
+++ b/src/app/projects/page.scss
@@ -7,210 +7,116 @@
 }
 
 .projects_aside {
-  width: 15.775rem;
+  min-width: 15.775rem;
+  height: fit-content;
   height: 100%;
   padding: 1.125rem 1.375rem;
   border-right: $stroke;
-}
 
-.projects_filter {
-  display: flex;
-  flex-direction: column;
-  gap: 1.125rem;
+  form {
+    li {
+      gap: 1.5rem;
+    }
 
-  span {
-    margin-left: 1.5rem;
-    gap: 0.625rem;
+    button {
+      width: 17px;
+      height: 17px;
+      border: 1px solid #607B96;
+      border-radius: 2px;
+      background-color: transparent;
+    }
   }
 }
 
-.checkbox {
-  display: inline-block;
-  vertical-align: middle;
-}
-
-.checkbox input {
-  border: 0;
-  clip: rect(0 0 0 0);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute;
-  width: 1px;
-}
-
-.checkbox label {
-  position: relative;
-  padding-left: 2.2em;
-  display: inline-block;
-}
-
-.checkbox label::before {
-  content: "";
-  display: inline-block;
-  vertical-align: middle;
-  height: 19px;
-  width: 19px;
-  border-radius: 2px;
-  background: transparent;
-  border: 1px solid #607B96;
-  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
-  transition: all 0.2s ease;
-  position: absolute;
-  top: 50%;
-  left: 0;
-  transform: translate(0, -50%);
-}
-
-.checkbox label::after {
-  content: "\2713";
-  position: absolute;
-  top: 50%;
-  left: 0.6rem;
-  transform: translate(-50%, -50%);
-  font-size: 1em;
-  color: #FFF;
-  opacity: 0;
-  transition: all 0.2s ease;
-}
-
-.checkbox label:focus::before,
-.checkbox label:hover::before {
-  outline: #607b964b;
-}
-
-.checkbox input:checked+label::before {
-  background: #607B96;
-  border-color: #607B96;
-}
-
-.checkbox input:checked+label::after {
-  opacity: 1;
-}
-
-.filter_name {
-  span {
-    margin-left: 10px;
-  }
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.projects_content {
+.projects_tab {
   width: 100%;
-  height: 100%;
-  padding: 2.5rem 5rem;
-  position: relative;
-  overflow-y: scroll;
+  height: 2.5rem;
+  border-bottom: $stroke;
 }
 
-.projects_list {
-  display: flex;
-  align-items: center;
-  gap: 2.5rem;
-  flex-wrap: wrap;
-  margin: auto;
+.project_wrapper {
+  flex-direction: column;
 }
 
-.project_title {
-  margin-bottom: 0.875rem;
-  color: #607B96;
-
-  span {
-    color: #5565E8;
-  }
+.project_title strong {
+  color: #5565E8;
 }
 
 .project_card {
   width: 370px;
+  height: fit-content;
+  margin-top: 1rem;
+  border: $stroke;
   border-radius: 15px;
   background-color: #011221;
-  border: $stroke;
+}
 
-  .img_wrapper {
-    border-bottom: $stroke;
-    height: 146px;
-    position: relative;
-
-    .img_wrapper_cover {
-      width: 368px;
-      height: 145px;
-      border-radius: 15px 15px 0 0;
-    }
-
-    .tech_box {
-      position: absolute;
-      top: 1rem;
-      right: 1rem;
-      display: flex;
-      gap: 0.5rem;
-    }
-  }
-
-  .description {
-    padding: 1.5rem 2rem;
-
-    .btn {
-      margin-top: 1.375rem;
-      justify-content: space-between;
-
-      .btn_view {
-        padding: 0.625rem 0.875rem;
-        background-color: #1C2B3A;
-        font-size: 0.875rem;
-        color: white;
-        border-radius: 0.5rem;
-      }
-
-      figure {
-        height: 40px;
-
-        svg {
-          width: 40px;
-          height: 40px;
-        }
-      }
-    }
+.card_banner {
+  position: relative;
+  .banner_img {
+    width: 368px;
+    border-radius: 15px 15px 0 0;
   }
 }
 
-.btn_filter {
-  margin-top: 1rem;
-  border: none;
-  font-family: inherit;
-  padding: 0.625rem 0.875rem;
-  background-color: #1C2B3A;
-  font-size: 0.875rem;
-  color: white;
-  border-radius: 0.5rem;
+.banner_techs {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  gap: 0.5rem;
 }
 
-.tech_stack {
+.tech_frame {
   width: 28px;
   height: 28px;
-  border-radius: 2px;
   position: relative;
+  border-radius: 2px;
   img {
+    width: 18px;
     height: 18px;
     position: absolute;
     inset: 0;
     margin: auto;
   }
+}
+
+.card_info {
+  padding: 1.5rem 2rem 2rem 2rem;
+  box-sizing: border-box;
+  p {
+    width: 100%;
+  }
+}
+
+.info_btns {
+  margin-top: 1.375rem;
+  justify-content: space-between;
+  .view_btn {
+    display: inline-block;
+    padding: 0.625rem 0.875rem;
+    border-radius: 0.5rem;
+    
+    background-color: #1C2B3A;
+    color: #ffffff;
+    font-size: 0.875rem;
+  }
+  .github_btn {
+    figure {
+      width: 40px;
+      height: 40px;
+    }
+  }
+}
+
+section {
+  width: 100%;
+  overflow-x: scroll;
+}
+
+.projects_grid {
+  max-width: 1190px;
+  display: flex;
+  gap: 2.5rem;
+  flex-wrap: wrap;
+  margin: 40px auto 40px 80px;
 }
