fix project page filter

--- a/src/components/page-header/PageHeader.scss
+++ b/src/components/page-header/PageHeader.scss
@@ -35,7 +35,7 @@
   }
 }
 
-.active {
+.page-active {
   color: $hoverFontClr;
   -webkit-box-shadow: inset 0px -3px 0px 0px $accentClr1;
   -moz-box-shadow: inset 0px -3px 0px 0px $accentClr1;
