--- a/src/app/projects/page.scss
+++ b/src/app/projects/page.scss
@@ -53,6 +53,7 @@
 
 .card_banner {
   position: relative;
+
   .banner_img {
     width: 368px;
     border-radius: 15px 15px 0 0;
@@ -71,6 +72,7 @@
   height: 28px;
   position: relative;
   border-radius: 2px;
+
   img {
     width: 18px;
     height: 18px;
@@ -83,6 +85,7 @@
 .card_info {
   padding: 1.5rem 2rem 2rem 2rem;
   box-sizing: border-box;
+
   p {
     width: 100%;
   }
@@ -91,15 +94,17 @@
 .info_btns {
   margin-top: 1.375rem;
   justify-content: space-between;
+
   .view_btn {
     display: inline-block;
     padding: 0.625rem 0.875rem;
     border-radius: 0.5rem;
-    
+
     background-color: #1C2B3A;
     color: #ffffff;
     font-size: 0.875rem;
   }
+
   .github_btn {
     figure {
       width: 40px;
@@ -119,4 +124,36 @@ section {
   gap: 2.5rem;
   flex-wrap: wrap;
   margin: 40px auto 40px 80px;
+}
+
+.buttons-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  span {
+    display: flex;
+    align-items: center;
+  }
+
+  label {
+    display: flex;
+    align-items: center;
+
+    img {
+      margin: 0 1ch 0 1rem;
+    }
+  }
+
+  button {
+    width: 1.25rem;
+    height: 1.25rem;
+    border: 1px solid #607B96;
+    border-radius: 2px;
+    background-color: transparent;
+  }
+
+  .active {
+    background-color: #607B96;
+  }
 }
