--- a/src/components/page-header/PageHeader.scss
+++ b/src/components/page-header/PageHeader.scss
@@ -41,3 +41,76 @@
   -moz-box-shadow: inset 0px -3px 0px 0px $accentClr1;
   box-shadow: inset 0px -3px 0px 0px $accentClr1;
 }
+
+@media screen and (max-width: 837px) {
+  .header {
+    padding-left: 0;
+
+    span {
+      display: none;
+    }
+
+    .header-nav {
+      li:nth-child(1) {
+        a {
+          border-left: none;
+        }
+      }
+
+      a {
+        padding: 1.125rem 2rem 1.125rem 2rem;
+        display: block;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 623px) {
+  .header {
+    padding-left: 0;
+
+    span {
+      display: none;
+    }
+
+    .header-nav {
+      a {
+        padding: 1.125rem 1.5rem 1.125rem 1.5rem;
+        display: block;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 557px) {
+  .header {
+    padding-left: 0;
+
+    span {
+      display: none;
+    }
+
+    .header-nav {
+      a {
+        padding: 1.125rem 1rem 1.125rem 1rem;
+        display: block;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 489px) {
+  .header {
+    padding-left: 1.375rem;
+
+    span {
+      display: block;
+    }
+
+    .header-nav {
+      a {
+        display: none;
+      }
+    }
+  }
+}
